# gnuplotpp

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md
.github/workflows/: c-cpp.yml  windows.yml
apps/: CMakeLists.txt
apps/tmp_test/: CMakeLists.txt  main.cpp  main_3.cpp  main_tmp.cpp
docs/: BuildAndInstall.md  Gnuplotpp_class.md  IDontKnowCpp.md  QuickStart.md  README.md  VS_guide.md  usage.md
docs/_internal_/: notice.header
examples/: CMakeLists.txt  README.md  main.cpp  main_functions.hpp
examples/001_GP_initialization/: main.cpp
examples/002_GP_output/: main.cpp
examples/003_plotting_2d/: main.cpp
gnuplotpp/: CMakeLists.txt
gnuplotpp/cmake/: Config.cmake.in
gnuplotpp/include/gnuplotpp/: classes.hpp  gnuplotpp.hpp
gnuplotpp/include/gnuplotpp/classes/: MultiStream.hpp  NonCopyable.hpp  PipeStreamBuf.hpp  ScopeGuard.hpp  Vector.hpp
gnuplotpp/src/: classes.cpp  gnuplotpp.cpp  pipe.hpp
gnuplotpp/src/classes/: MultiStream.cpp  PipeStreamBuf.cpp  Vector.cpp
